Chore: Upgrade Meta

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,10 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+# Ignore tfplan binary files
+*.tfplan
+
+# Ignore validation lock file
+# https://discuss.hashicorp.com/t/what-is-the-best-practise-with-terraform-lock-hcl-in-modules-commit-or-not/28648/2
+.terraform.lock.hcl
