--- a/proxy/data/templates/default.conf.template
+++ b/proxy/data/templates/default.conf.template
@@ -3,14 +3,14 @@ resolver_timeout 5s;
 
 # Extract subdomain from $host
 map $host $subdomain {
-    ~^(?<sub>.+)\.localhost$ $sub;
-    default                 "";
+  ~^(?<sub>.+)\.localhost$ $sub;
+  default                 "";
 }
 
 # Define the upstream host based on the subdomain
 map $subdomain $upstream_host {
-    default $subdomain.${CUSTOM_URL_AWS};
-    ""      ${CUSTOM_URL_AWS};
+  default $subdomain.${CUSTOM_URL_AWS};
+  ""      ${CUSTOM_URL_AWS};
 }
 
 server {
@@ -22,6 +22,7 @@ server {
 
     # Add Basic Authentication header
     proxy_set_header Authorization "Basic ${CUSTOM_CRED_BASIC_AUTH}";
+    proxy_read_timeout 3600;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
