Refactor: Implement Dockerfile ENV

--- a/proxy/docker-compose.yml
+++ b/proxy/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   nginx:
     image: nginx:1.27.2-alpine3.20
+    container_name: "nginx-aws"
+    restart: unless-stopped
     ports:
       - 59385:443
       - 59383:80
@@ -8,5 +10,5 @@ services:
       - ./data/templates:/etc/nginx/templates:ro
     environment:
       - NGINX_HOST=localhost
-      - CUSTOM_CRED_BASIC_AUTH=<BASE64_ENCODED_BASIC_AUTH_TOKEN> # Example: eW91ci11c2VybmFtZTpteS1wYXNzd29yZA== (encode through Base64)
-      - CUSTOM_URL_AWS=<BASE_URL_AWS_BACKEND>                    # Example: aws.domain.tld (omit https://)
+      - CUSTOM_CRED_BASIC_AUTH=${CUSTOM_CRED_BASIC_AUTH} # Example: eW91ci11c2VybmFtZTpteS1wYXNzd29yZA== (encode through Base64)
+      - CUSTOM_URL_AWS=${CUSTOM_URL_AWS}                 # Example: aws.domain.tld (omit https://)
